# tablecloth-melange

./: .gitignore  README.md  package-lock.json  package.json  tablecloth-melange.opam
src/: Internal.re  Tablecloth.re  TableclothArray.re  TableclothArray.rei  TableclothBool.re  TableclothBool.rei  TableclothChar.re  TableclothChar.rei  TableclothComparator.re  TableclothComparator.rei  TableclothContainer.re  TableclothFloat.re  TableclothFloat.rei  TableclothFun.re  TableclothFun.rei  TableclothInt.re  TableclothInt.rei  TableclothList.re  TableclothList.rei  TableclothMap.re  TableclothMap.rei  TableclothMap.res  TableclothOption.re  TableclothOption.rei  TableclothResult.re  TableclothResult.rei  TableclothSet.re  TableclothSet.rei  TableclothSet.res  TableclothString.re  TableclothString.rei  TableclothTuple2.re  TableclothTuple2.rei  TableclothTuple3.re  TableclothTuple3.rei  dune
test/: ArrayTest.re  BoolTest.re  CharTest.re  ComparatorTest.re  FloatTest.re  FunTest.re  IntTest.re  JestStubs.re  ListTest.re  MapTest.re  OptionTest.re  ResultTest.re  SetTest.re  StringTest.re  Tuple2Test.re  Tuple3Test.re
