opam-version: "2.0"
name: "tablecloth-melange"
version: "0.1.0"
synopsis: "A portable standard library enhancement for Reason."
description: """
Tablecloth is an ergonomic, cross-platform, standard library for use with OCaml and Rescript. It provides an easy-to-use, comprehensive and performant standard library, that has the same API on in OCaml and Rescript.
"""
maintainer: "Paul Biggar <paul@darklang.com>"
authors: [
  "Paul Biggar <paul@darklang.com>"
  "Pomin Wu <pomin.wu@proton.me>"
]
license: "MIT"
homepage: "https://github.com/darklang/tablecloth-melange"
bug-reports: "https://github.com/darklang/tablecloth-melange/issues"
dev-repo: "git://github.com/darklang/tablecloth-melange"
depends: [
  "ocaml"
  "dune"
  "melange"

  "melange-jest" {withtest}
]
build: ["dune" "build" "-p" name "-j" jobs]
