opam-version: "2.0"
name: "tablecloth-melange"
version: "0.0.9"
synopsis: "A portable standard library enhancement for Reason."
description: """
Tablecloth is an ergonomic, cross-platform, standard library for use with OCaml, Rescript, F# and Reason.  It provides an easy-to-use, comprehensive and performant standard library, that has the same API on all platforms.
"""
maintainer: "Paul Biggar <paul@darklang.com>"
authors: [
  "Paul Biggar <paul@darklang.com>"
  "Pomin Wu <pomin.wu@proton.me>"
]
license: "MIT"
homepage: "https://github.com/tableclothdotdev/tablecloth-melange"
bug-reports: "https://github.com/tableclothdotdev/tablecloth-melange/issues"
dev-repo: "git://github.com/tableclothdotdev/tablecloth-melange"
depends: [
  "ocaml"
  "dune"
  "reason"
  "melange"

  "melange-jest" {withtest}
]
build: ["dune" "build" "-p" name "-j" jobs]
